# mayo-lang

./: .gitignore  CMakeLists.txt  README.MD  compile_flags.txt
cmake/: FindCriterion.cmake
samples/: raylib_createwindow.mayo  raylib_moving_box.mayo  string_basic.mayo
src/: backend_qbe.c  backend_qbe.h  compile_error.c  compile_error.h  file_position.c  file_position.h  lexer.c  lexer.h  main.c  parser.c  parser.h  semantics.c  semantics.h
src/backend/: impl_gen.c  impl_gen.h
src/cli/: cli.c  cli.h
src/common/: arena.c  arena.h  error.h  range.h  stats.h  string.c  string.h  sym_table.c  sym_table.h  utils.c  utils.h
src/lexer/: lexer_eat.c  lexer_token.c  lexer_token.h  token_kinds.h
src/optimizer/: optimize.h  optimize_ast.c
src/parser/: ast_eval.c  ast_eval.h  ast_kinds.h  ast_print.c  ast_print.h  ast_type.c  ast_type.h  ops.h  parser_eat.c  parser_error.h  parser_parse.c  parser_parse.h
src/typechecker/: typechecker.c  typechecker.h
src/variant/: core_type.c  core_type.h  variant.c  variant.h
tests/: test_core_type.c  test_main.c  test_utils.c
tests/common/: test_arena.c  test_string.c  test_utils.c
tests/lexer/: lexer.c  lexer_token.c  test_lexer.c
tests/parser/: test_parser.c
